# cw-iv-021_todo-list

./: .gitignore  CMakeLists.txt  Makefile  README.md  base.csv  test.c  ТЗ.docx
.github/workflows/: Test.yml  cmake.yml
TextField/: CMakeLists.txt  main.cpp  note.cpp  note.h  note.ui  ui_note.h
ToDO/: CMakeLists.txt  homepage.cpp  main.cpp  main.ui  note.cpp  note.h
ToDo/: CMakeLists.txt  base.csv  homepage.cpp  homepage.h  main.cpp  main.ui  mainmenu.h  note.cpp  note.h  note.ui  todo_test.cpp  todo_test.h  todofile.cpp  todofile.h
ToDoFile/: CMakeLists.txt  Makefile  todofile.cpp  todofile.h
build-MainMenu-Desktop-Debug/: CMakeCache.txt  MainMenu  MainMenu.cbp  Makefile  base.csv  cmake_install.cmake
build-MainMenu-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-b3c0fcc4d45c693731a8.json  cmakeFiles-v1-e2824a772213ddecd318.json  codemodel-v2-d4c23e1d29b5fb7de6b2.json  index-2021-05-16T18-40-24-0803.json  target-MainMenu-Debug-15c5c4bd143d270e18e4.json  target-MainMenu_autogen-Debug-a32af5595f7f04228442.json
build-MainMenu-Desktop-Debug/MainMenu_autogen/: mocs_compilation.cpp
build-MainMenu-Desktop-Debug/MainMenu_autogen/EWIEGA46WW/: moc_homepage.cpp  moc_note.cpp
build-MainMenu-Desktop-Debug/MainMenu_autogen/include/: ui_note.h
mainMenu/: CMakeLists.txt  findialog.cpp  findialog.h  homepage.cpp  homepage.h  main.cpp  main.ui  mainmenu.h
tests/: CMakeLists.txt  Makefile  homepage.cpp  main.cpp  todo_test.cpp  todo_test.h  todofile.h
